fixed invisible hamburger slider by adding back navbar-dark class and overwriting font color styles

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ h5 {
 
 /* NAVIGATION */ 
 
+.navbar-dark li a {
+    color: white !important;
+}
+
 .navbar-toggler {
     position: relative;
     left:-40px;
